--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  max-width: 768px;
+  max-width: 992px;
   margin: 0 auto;
   background: white;
 }
@@ -11,20 +11,21 @@
   flex-direction: column;
   justify-content: center;
   color: white;
-  padding: 1rem 0;
+  padding: .5rem 0;
+  height: 15rem;
 }
 .App .rope {
   background-size: cover;
   background-image: url('../img/rope_border.png');
-  width: 53%;
+  width: 40%;
   margin: 0 auto;
-  padding: 1rem 0;
-  height: 9.5rem;
+  padding: 1rem 1.5rem;
+  height: 10.5rem;
 }
 .App-header h1 {
   font-size: 2.5rem;
   font-family: 'durango'; 
-  line-height: 3rem;
+  line-height: 3.5rem;
   margin-bottom: .75rem;
 }
 .App-header p {
