--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,6 +35,9 @@
   font-size: 1.15rem;
   margin: .5rem 0;
 }
+.App .sig {
+  padding: 1rem 0;
+}
 @font-face {
   font-family: 'durango';
   src: url('../img//Durango\ Western.otf');
