--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -9,4 +9,11 @@
   max-width: 5550px;
   font-size: 1rem;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+.Location p:nth-child(2) {
+  margin-bottom: 0px;
+}
+.Location p:nth-child(3) {
+  font-size: 0.75rem;
 }
