Updates to signature/footer

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,12 +11,12 @@
   flex-direction: column;
   justify-content: center;
   color: white;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   height: 15rem;
 }
 .App .rope {
   background-size: cover;
-  background-image: url('../img/rope_border.png');
+  background-image: url("../img/rope_border.png");
   width: 40%;
   margin: 0 auto;
   padding: 1rem 1.5rem;
@@ -24,25 +24,25 @@
 }
 .App-header h1 {
   font-size: 2.5rem;
-  font-family: 'durango'; 
+  font-family: "durango";
   line-height: 3.5rem;
-  margin-bottom: .75rem;
+  margin-bottom: 0.75rem;
 }
 .App-header p {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 .App-header .motto {
   font-size: 1.15rem;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 .App .sig {
-  padding: 1rem 0;
+  padding: 1rem 0 1.5rem 0;
 }
 @font-face {
-  font-family: 'durango';
-  src: url('../img//Durango\ Western.otf');
+  font-family: "durango";
+  src: url("../img//Durango\ Western.otf");
 }
 @font-face {
-  font-family: 'billyforges';
-  src: url('../img/billyforges.otf');
+  font-family: "billyforges";
+  src: url("../img/billyforges.otf");
 }
