--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -11,9 +11,14 @@
   line-height: 1.5;
   margin-bottom: 15px;
 }
-.Location p:nth-child(2) {
+.Location p:nth-child(3) {
   margin-bottom: 0px;
 }
-.Location p:nth-child(3) {
+.Location p:nth-child(4) {
   font-size: 0.75rem;
+}
+.Location .img {
+  width: 30%;
+  border-radius: 25px;
+  margin-bottom: 15px;
 }
