--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -3,9 +3,13 @@
 }
 .Menu p {
   font-size: 1rem;
-  max-width: 550px;
-  margin: 1% auto;
+  max-width: 500px;
+  margin: 1% auto 3% auto;
   line-height: 1.5;
+}
+.Menu .menu {
+  border-radius: 25px;
+  margin-bottom: 1%;
 }
 .Menu .meals {
   display: flex;
@@ -15,6 +19,7 @@
   width: 30%;
   height: 30%;
   margin: 0 1.5%;
+  border-radius: 25px;
 }
 .Menu .disclaimer {
   font-size: 0.8rem;
