--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,127 @@
-.App {
-  text-align: center;
-  max-width: 992px;
-  margin: 0 auto;
-  background: white;
-}
+/* Desktop 992> */
+@media (min-width: 992px) {
+  .App {
+    text-align: center;
+    max-width: 992px;
+    margin: 0 auto;
+    background: white;
+  }
 
-.App-header {
-  background-color: maroon;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: white;
-  padding: 0.5rem 0;
-  height: 15rem;
+  .App-header {
+    background-color: maroon;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    padding: 0.5rem 0;
+    height: 15rem;
+  }
+  .App .rope {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url("../img/rope_border.png");
+    margin: 0 auto;
+    padding: 1rem 1.5rem;
+    height: 10.5rem;
+  }
+  .App-header h1 {
+    font-size: 2.5rem;
+    font-family: "durango";
+    line-height: 3.5rem;
+    margin-bottom: 0.75rem;
+  }
+  .App-header p {
+    font-size: 0.8rem;
+  }
+  .App-header .motto {
+    font-size: 1.15rem;
+    margin: 0.5rem 0;
+  }
+  .App .sig {
+    padding: 1rem 0 1.5rem 0;
+  }
 }
-.App .rope {
-  background-size: cover;
-  background-image: url("../img/rope_border.png");
-  width: 40%;
-  margin: 0 auto;
-  padding: 1rem 1.5rem;
-  height: 10.5rem;
+/* Tablet 600-992 */
+@media (min-width: 600px) {
+  .App {
+    text-align: center;
+    margin: 0 auto;
+    background: white;
+  }
+
+  .App-header {
+    background-color: maroon;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+  }
+  .App .rope {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url("../img/rope_border.png");
+    margin: 15px auto;
+    padding: 15px 30px;
+    height: 8rem;
+  }
+  .App-header h1 {
+    font-size: 1.5rem;
+    font-family: "durango";
+    line-height: 3.5rem;
+    margin-bottom: 15px;
+  }
+  .App-header p {
+    font-size: 0.8rem;
+  }
+  .App-header .motto {
+    font-size: 1rem;
+    margin-top: 10px;
+  }
+  .App .sig {
+    font-size: 0.5rem;
+    padding: 1rem 0 1.5rem 0;
+  }
 }
-.App-header h1 {
-  font-size: 2.5rem;
-  font-family: "durango";
-  line-height: 3.5rem;
-  margin-bottom: 0.75rem;
-}
-.App-header p {
-  font-size: 0.8rem;
-}
-.App-header .motto {
-  font-size: 1.15rem;
-  margin: 0.5rem 0;
-}
-.App .sig {
-  padding: 1rem 0 1.5rem 0;
+/* Mobile <600 */
+@media (max-width: 600px) {
+  .App {
+    text-align: center;
+    margin: 0 auto;
+    background: white;
+  }
+
+  .App-header {
+    background-color: maroon;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+  }
+  .App .rope {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-image: url("../img/rope_border.png");
+    margin: 15px auto;
+    padding: 15px 30px;
+    height: 8rem;
+  }
+  .App-header h1 {
+    font-size: 1.5rem;
+    font-family: "durango";
+    line-height: 3.5rem;
+    margin-bottom: 15px;
+  }
+  .App-header p {
+    font-size: 1rem;
+  }
+  .App-header .motto {
+    font-size: 1.25rem;
+    margin-top: 10px;
+  }
+  .App .sig {
+    font-size: 0.5rem;
+    padding: 1rem 0 1.5rem 0;
+  }
 }
 @font-face {
   font-family: "durango";
