--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -1,24 +1,57 @@
-.Location {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 10px;
+/* Mobile <600 */
+@media (max-width: 600px) {
+  .Location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+  .Location p {
+    width: 60%;
+    max-width: 550px;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 15px;
+  }
+  .Location p:nth-child(3) {
+    margin-bottom: 0px;
+  }
+  .Location p:nth-child(4) {
+    font-size: 0.75rem;
+  }
+  .Location .img {
+    width: 55%;
+    border-radius: 25px;
+    margin-bottom: 15px;
+  }
 }
-.Location p {
-  width: 60%;
-  max-width: 5550px;
-  font-size: 1rem;
-  line-height: 1.5;
-  margin-bottom: 15px;
+/* Tablet 600-992 */
+@media (min-width: 600px) {
+  .Location {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+  .Location p {
+    width: 60%;
+    max-width: 550px;
+    font-size: 1rem;
+    line-height: 1.5;
+    margin-bottom: 15px;
+  }
+  .Location p:nth-child(3) {
+    margin-bottom: 0px;
+  }
+  .Location p:nth-child(4) {
+    font-size: 0.75rem;
+  }
+  .Location .img {
+    width: 30%;
+    border-radius: 25px;
+    margin-bottom: 15px;
+  }
 }
-.Location p:nth-child(3) {
-  margin-bottom: 0px;
-}
-.Location p:nth-child(4) {
-  font-size: 0.75rem;
-}
-.Location .img {
-  width: 30%;
-  border-radius: 25px;
-  margin-bottom: 15px;
+/* Desktop 992> */
+@media (min-width: 992px) {
 }
