--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -45,7 +45,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 3%;
+    margin-top: 1rem;
   }
   .Home .node:nth-child(2) {
     display: flex;
@@ -70,14 +70,14 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
-    padding-bottom: 3%;
+    padding: 1rem 0 3%;
   }
   .Home .node {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 3%;
+    margin-top: 1rem;
   }
   .Home .node:nth-child(2) {
     display: flex;
@@ -86,11 +86,11 @@
     flex-wrap: wrap;
   }
   .Home .img {
-    width: 40%;
+    width: 42%;
     border-radius: 25px;
   }
   .Home p {
-    width: 40%;
+    width: 42%;
     font-size: 1.25rem;
     line-height: 1.5;
   }
