--- a/src/styles/Location.css
+++ b/src/styles/Location.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 1rem;
   }
   .Location p {
     width: 60%;
@@ -39,6 +39,7 @@
     font-size: 1.25rem;
     line-height: 1.5;
     margin-bottom: 15px;
+    margin-top: 1rem;
   }
   .Location p:nth-child(3) {
     margin-bottom: 0px;
